--- a/edition/config/custom-style.css
+++ b/edition/config/custom-style.css
@@ -34,6 +34,10 @@
 	font-style: italic;
 }
 
+.speaker{font-style:italic;}
+
+stage{font-style:italic;}
+
 span.analogue span.analogue__text span.quote {
 	font-style: italic;
 }
