--- a/edition/config/custom-style.css
+++ b/edition/config/custom-style.css
@@ -19,6 +19,26 @@
 /*                                                                   */
 
 /* ***************************************************************** */
+span.Contextual{
+    background-color: green;
+    font-size: 5px!important;
+}
+span.Annotations1833{
+    background-color: blue;
+     font-size: 5px!important;
+}
+span.Etymological{
+    background-color: orange;
+    font-size: 5px!important;
+    }
+span.Intertextual{
+    background-color: grey;
+    font-size: 5px!important;
+    }
+span.Textual{
+    background-color: yellow;
+    font-size: 5px!important;
+    }
 .term {
 	background-color: coral;
 }
