--- a/edition/config/custom-style.css
+++ b/edition/config/custom-style.css
@@ -24,7 +24,7 @@ span.Contextual{
     font-size: 5px!important;
 }
 
-evt_note.Etymological{
+.evt_note.Etymological{
     background-color: orange;
     font-size: 5px!important;
     }
