--- a/edition/config/custom-style.css
+++ b/edition/config/custom-style.css
@@ -19,20 +19,20 @@
 /*                                                                   */
 
 /* ***************************************************************** */
-.evt_note.Contextual{
+note.Contextual{
     background-color: green;
     font-size: 5px!important;
 }
 
-.evt_note.Etymological{
+note.Etymological{
     background-color: orange;
     font-size: 5px!important;
     }
-.evt_note.intertextual{
+note.intertextual{
     background-color: grey;
     font-size: 5px!important;
     }
-.evt_note.Textual{
+note.Textual{
     background-color: yellow;
     font-size: 5px!important;
     }
