--- a/edition/config/custom-style.css
+++ b/edition/config/custom-style.css
@@ -25,8 +25,7 @@
     font-size: 5px!important;
 }
 
-evt_note.note[data-type="etymological]
-{
+evt_note.note[data-type="etymological]{
     background-color: orange;
     font-size: 5px!important;
     }
